fixed layout bug

--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ header, footer
 	color: #aaa;
 	padding: 2em 0.5em 0 0.5em;
 }
+footer
+{
+	padding-bottom: 0.5em;
+}
 header a,
 footer a
 {
@@ -64,6 +68,7 @@ main
 	background: #eee;
 	flex-grow: 1;
 	padding: 1em 0;
+	overflow: hidden;
 }
 main h1
 {
